# Bagel

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
Bagel/src/: Bagel.h  Test.cpp  Test.h  bgpch.h
Bagel/src/Bagel/: Application.cpp  Application.h  Core.h  EnterPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Bagel/src/Bagel/Core/: Application.cpp  Application.h  Core.h  EnterPoint.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Timestep.h  Window.h
Bagel/src/Bagel/Debug/: Instrumentor.h
Bagel/src/Bagel/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Bagel/src/Bagel/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Bagel/src/Bagel/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Bagel/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Bagel/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: Application.cpp  CMakeLists.txt  ExampleLayer.cpp  ExampleLayer.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
